--- a/app/globals.css
+++ b/app/globals.css
@@ -59,5 +59,12 @@
   .badge-info {
     @apply bg-blue-100 text-blue-800;
   }
+
+  .line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
 
